--- a/SCSS/all.scss
+++ b/SCSS/all.scss
@@ -1,5 +1,7 @@
 @import "reset";
 
+@import url("<https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700;900&display=swap>");
+
 $maincolor: #020202;
 $txt-white: #ffffff;
 $txt-black: #020202;
@@ -25,7 +27,8 @@ body {
 }
 
 .container {
-  max-width: 1296px;
+  padding: 0 12px;
+  max-width: 1320px;
   margin: 0 auto;
 }
 
