--- a/SCSS/all.css
+++ b/SCSS/all.css
@@ -3,7 +3,6 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-@import url("<https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700;900&display=swap>");
 html,
 body,
 div,
@@ -239,6 +238,44 @@ h3 {
   text-align: center;
   margin-right: 24px;
   cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  display: block;
+  color: inherit;
+}
+
+.material-icons {
+  vertical-align: bottom;
+}
+
+.fs-normal {
+  font-size: 16px;
+}
+
+.mb-8 {
+  margin-bottom: 8px;
+}
+
+.mb-16 {
+  margin-bottom: 16px;
+}
+
+.ml-12 {
+  margin-left: 12px;
+}
+
+.ml-20 {
+  margin-left: 20px;
+}
+
+.mt-8 {
+  margin-top: 8px;
+}
+
+.d-flex {
+  display: flex;
 }
 
 .header {
@@ -672,20 +709,27 @@ h3 {
 }
 .questions .questionList {
   width: 66%;
-  display: flex;
-  flex-direction: column;
+  /* 常見問題區塊 */
 }
-.questions .questionList .QA {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+.questions .questionList .d-none {
+  display: none;
+}
+.questions .questionList .d-block {
+  display: block;
+}
+.questions .questionList .qa-item {
   padding: 20px 40px;
   border: 1px solid #525252;
   border-radius: 16px;
-  margin-bottom: 16px;
 }
-.questions .questionList .QA P {
-  padding-left: 15px;
+.questions .questionList .qa-item.active {
+  border: 1px solid #FFFFFF;
+}
+.questions .questionList .qa-item:hover {
+  border-color: #ffffff;
+}
+.questions .questionList .collapse-content p.show {
+  display: block;
 }
 
 .navbar-collapse {
