--- a/SCSS/all.scss
+++ b/SCSS/all.scss
@@ -1,6 +1,5 @@
 @import "reset";
 
-@import url("<https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700;900&display=swap>");
 
 $maincolor: #020202;
 $txt-white: #ffffff;
@@ -103,6 +102,44 @@ h3 {
   text-align: center;
   margin-right: 24px;
   cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  display: block;
+  color: inherit;
+}
+
+.material-icons {
+  vertical-align: bottom;
+}
+
+.fs-normal {
+  font-size: 16px;
+}
+
+.mb-8 {
+  margin-bottom: 8px;
+}
+
+.mb-16 {
+  margin-bottom: 16px;
+}
+
+.ml-12 {
+  margin-left: 12px;
+}
+
+.ml-20 {
+  margin-left: 20px;
+}
+
+.mt-8 {
+  margin-top: 8px;
+}
+
+.d-flex {
+  display: flex;
 }
 
 // ----  header -----
@@ -564,23 +601,37 @@ h3 {
   padding: 160px 0px 160px 0px;
   border-bottom: 1px solid #ffffff;
   .questionList {
-    width: 66%;
-    display: flex;
-    flex-direction: column;
-    .QA {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      padding: 20px 40px;
-      border: 1px solid #525252;
-      border-radius: 16px;
-      margin-bottom: 16px;
-      P {
-        padding-left: 15px;
-      }
-    }
+    width: 66%;  
+    /* 常見問題區塊 */
+.d-none {
+  display: none;
+}
+
+.d-block {
+  display: block;
+}
+
+.qa-item {
+  padding: 20px 40px;
+  border: 1px solid #525252;
+  border-radius: 16px;
+}
+
+.qa-item.active {
+  border: 1px solid #FFFFFF;
+}
+
+.qa-item:hover {
+  border-color: #ffffff;
+}
+
+.collapse-content p.show {
+  display: block;
+}
+  
   }
 }
+
 
 // menu- mobile ------
 .navbar-collapse {
@@ -786,4 +837,5 @@ h3 {
     align-items: center;
     justify-content: center;
   }
+
 }
