--- a/SCSS/all.css
+++ b/SCSS/all.css
@@ -323,6 +323,29 @@ a {
   margin: 160px 0px 160px 0px;
 }
 
+@keyframes movingTop {
+  33% {
+    transform: translateY(0%);
+  }
+  50% {
+    transform: translateY(0%);
+  }
+  100% {
+    transform: translateY(-120%);
+  }
+}
+.animation1 {
+  animation: 5s ease-in-out infinite 1s movingTop;
+}
+
+.animation2 {
+  animation: 5s ease-in-out infinite 1.5s movingTop;
+}
+
+.animation3 {
+  animation: 5s ease-in-out infinite 2s movingTop;
+}
+
 .serviceTitle {
   display: flex;
   justify-content: space-between;
